--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ public/Assets
 /protected/Layouts/assets/images/albums/
 /protected/Layouts/assets/images/news/
 /protected/Layouts/assets/images/slider/
+/protected/Layouts/assets/images/posts/
